# 11

./: 01_快速使用说明.md  PROJECT_INDEX.md  README.md  SKILL_INDEX.md  _快速使用说明.md  _技能状态看板.md  audit_cache_status.py  current_research.md  debug_sonic_dna.py  debug_sonic_dna_v2.py  debug_sonic_dna_v3.py  debug_sonic_simulation.py  fix_sorter.py  house_set_debug_utf8.txt  skills_index.md  verify_cache_energy.py  verify_dsp_librosa.py  verify_final_audit.py  verify_final_audit_v2.py  verify_ninja_dsp.py  verify_rekordbox_primacy.py  verify_triad_dimensions.py  verify_triad_rectified.py  verify_triad_vibe.py  verify_unification.py  🚀_快速使用说明.md
agents/: evolution_cloud_miner_agent.py  evolution_mashup_agent.py
config/: dj_blueprints.yaml  dj_rules.yaml  evolution_config.py  set_presets.py  split_config.py
core/: audio_cortex.py  audio_dna.py  audit_mflo.txt  audit_missing_files.py  audit_newjeans.txt  batch_god_scanner.py  cache_manager.py  common_utils.py  config_loader.py  diag_mastering.py  diag_sota_2026.py  enhanced_structure_detector.py  find_missing_god_mode.py  genre_compatibility.py  (+12 more)
core/rekordbox-mcp/: .gitignore  LICENSE  accurate_playlists.py  analyze_chinese_songs.py  correct_playlists.py  delete_hidden_playlists.py  delete_hidden_playlists_fixed.py  detailed_playlists.py  final_playlists.py  find_database.py  honest_chinese_analysis.py  main.py  mcp_chinese_analysis.py  pyproject.toml  read_playlists.py  run-server.sh  setup-key.py  simple_mcp_analysis.py  verify_real_songs.py
core/rekordbox-mcp/rekordbox_mcp/: __init__.py  database.py  models.py  server.py
(+833 files in other folders)
