[project]
name = "rekordbox-mcp-python"
version = "1.0.0"
description = "MCP server for rekordbox database management with real-time database access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.0",
    "pyrekordbox>=0.4.3",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
rekordbox-mcp = "rekordbox_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rekordbox_mcp"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
